[package]
name = "ytmdl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.1.8"
hyper = "0.14.25"
hyper-native-tls = "0.3.0"
log = "0.4.17"
pbr = "1.1.1"
regex = "1.7.1"
serde = "1.0.156"
serde_derive = "1.0.156"
serde_urlencoded = "0.7.1"
stderrlog = "0.5.4"
url = "2.3.1"

[dev-dependencies]
reqwest = "0.11.14"

[[bin]]
name = "ytmdl"
path = "src/main.rs"
