[package]
name = "ytmdl"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = {version="0.14.25", features=["full"]}
hyper-tls = "0.5.0"
pbr = "1.1.1"
regex = "1.7.2"
serde_json = "1.0.94"
tempfile = "3.5.0"
tokio = {version="1.26.0", features=["full"]}

[dev-dependencies]
dhat = "0.3.2"

[profile.release]
lto = true
codegen-units = 1

[[bin]]
name = "ytmdl"
path = "src/main.rs"
